[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/characters/hero/Hero.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/models/game/Game.gd" type="Script" id=2]
[ext_resource path="res://src/characters/enemies/Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/models/ui/PlayHUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/characters/enemies/Elite.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/characters/enemies/Boss.tscn" type="PackedScene" id=6]

[node name="Game" type="Node"]
script = ExtResource( 2 )
mob_scene = ExtResource( 3 )
elite_scene = ExtResource( 5 )
boss_scene = ExtResource( 6 )

[node name="Hero" parent="." instance=ExtResource( 1 )]
position = Vector2( 455, 1856 )

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartTimer" type="Timer" parent="."]

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 540, 1824 )

[node name="PlayHUD" parent="." instance=ExtResource( 4 )]

[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
